--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,12 @@ Jinja2==2.11.3
 MarkupSafe==1.1.1
 numpy==1.20.2
 pandas==1.2.4
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
 python-dateutil==2.8.1
 pytz==2021.1
 six==1.16.0
-SQLAlchemy==1.3.23
+SQLAlchemy==1.4.14
 typing-extensions==3.10.0.0
 Werkzeug==1.0.1
 wincertstore==0.2
